k8s/networkpolicy-site.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: site-allow-only-ingress
  namespace: arman
spec:
  podSelector:
    matchLabels:
      app: site
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 3000
